--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js" 
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "serialport": "^10.4.0",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
