--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js" 
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@serialport/parser-readline": "^10.3.0",
-    "express": "^4.18.1",
-    "serialport": "^10.4.0",
-    "socket.io": "^2.0.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "heroku-postbuild": "npm run build",
+        "dev": "nodemon index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@serialport/parser-readline": "^10.3.0",
+        "express": "^4.18.1",
+        "serialport": "^10.4.0",
+        "socket.io": "^2.0.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.16"
+    }
 }
