--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "npm run build",
+        "heroku-postbuild": "npm run build",
+        "start": "node index.js",
         "dev": "nodemon index.js"
     },
     "keywords": [],
