--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "heroku-postbuild": "npm run build",
         "start": "node index.js",
+        "build":"tsc",
         "dev": "nodemon index.js"
     },
     "keywords": [],
